--- a/src/app/auth/components/register/register.component.html
+++ b/src/app/auth/components/register/register.component.html
@@ -6,7 +6,7 @@
         <p class="text-xs-center">
           <a [routerLink]="['/login']">Have an account?</a>
         </p>
-        Backend errors are here
+        BackendErrors are here
         <form [formGroup]="form" (ngSubmit)="onSubmit()">
           <fieldset>
             <fieldset class="form-group">
@@ -15,26 +15,30 @@
                 class="form-control form-control-lg"
                 placeholder="Username"
                 formControlName="username"
-                />
+              />
             </fieldset>
             <fieldset class="form-group">
-                <input
+              <input
                 type="text"
                 class="form-control form-control-lg"
                 placeholder="Email"
                 formControlName="email"
-                />
+              />
             </fieldset>
             <fieldset class="form-group">
-                <input
-                type="text"
+              <input
+                type="password"
                 class="form-control form-control-lg"
                 placeholder="Password"
                 formControlName="password"
               />
             </fieldset>
-            <button class="btn btn-lg btn-primary pull-xs-right" type="submit">
-              Sigh Up
+            <button
+              class="btn btn-lg btn-primary pull-xs-right"
+              type="submit"
+              [disabled]="isSubmitting$ | async"
+            >
+              Sign up
             </button>
           </fieldset>
         </form>
