--- a/src/app/auth/components/register/register.component.html
+++ b/src/app/auth/components/register/register.component.html
@@ -6,37 +6,40 @@
         <p class="text-xs-center">
           <a [routerLink]="['/login']">Have an account?</a>
         </p>
-        BackendErrors are here
-        <form [formGroup]="form" (ngSubmit)="onSubmit()">
+        <mc-backend-error-messages
+          *ngIf="backendErrors$ | async"
+          [backendErrors]="backendErrors$ | async"
+        ></mc-backend-error-messages>
+        <form (ngSubmit)="onSubmit()" [formGroup]="form">
           <fieldset>
             <fieldset class="form-group">
               <input
-                type="text"
                 class="form-control form-control-lg"
-                placeholder="Username"
                 formControlName="username"
-              />
-            </fieldset>
-            <fieldset class="form-group">
-              <input
+                placeholder="Username"
                 type="text"
-                class="form-control form-control-lg"
-                placeholder="Email"
-                formControlName="email"
               />
             </fieldset>
             <fieldset class="form-group">
               <input
-                type="password"
                 class="form-control form-control-lg"
-                placeholder="Password"
+                formControlName="email"
+                placeholder="Email"
+                type="text"
+              />
+            </fieldset>
+            <fieldset class="form-group">
+              <input
+                class="form-control form-control-lg"
                 formControlName="password"
+                placeholder="Password"
+                type="password"
               />
             </fieldset>
             <button
+              [disabled]="isSubmitting$ | async"
               class="btn btn-lg btn-primary pull-xs-right"
               type="submit"
-              [disabled]="isSubmitting$ | async"
             >
               Sign up
             </button>
