--- a/src/app/auth/components/register/register.component.html
+++ b/src/app/auth/components/register/register.component.html
@@ -10,36 +10,36 @@
           *ngIf="backendErrors$ | async"
           [backendErrors]="backendErrors$ | async"
         ></mc-backend-error-messages>
-        <form (ngSubmit)="onSubmit()" [formGroup]="form">
+        <form [formGroup]="form" (ngSubmit)="onSubmit()">
           <fieldset>
             <fieldset class="form-group">
               <input
+                type="text"
                 class="form-control form-control-lg"
-                formControlName="username"
                 placeholder="Username"
-                type="text"
+                formControlName="username"
               />
             </fieldset>
             <fieldset class="form-group">
               <input
+                type="text"
                 class="form-control form-control-lg"
-                formControlName="email"
                 placeholder="Email"
-                type="text"
+                formControlName="email"
               />
             </fieldset>
             <fieldset class="form-group">
               <input
-                class="form-control form-control-lg"
-                formControlName="password"
-                placeholder="Password"
                 type="password"
+                class="form-control form-control-lg"
+                placeholder="Password"
+                formControlName="password"
               />
             </fieldset>
             <button
-              [disabled]="isSubmitting$ | async"
               class="btn btn-lg btn-primary pull-xs-right"
               type="submit"
+              [disabled]="isSubmitting$ | async"
             >
               Sign up
             </button>
