--- a/src/app/globalFeed/components/globalFeed/globalFeed.component.html
+++ b/src/app/globalFeed/components/globalFeed/globalFeed.component.html
@@ -3,11 +3,11 @@
   <div class="container page">
     <div class="row">
       <div class="col-md-9">
-        Feed toggler
+        FEED TOGGLER
         <mc-feed [apiUrl]="apiUrl"></mc-feed>
       </div>
       <div class="col-md-3">
-        Popular tags
+        POPULAR TAGS
       </div>
     </div>
   </div>
