--- a/src/app/shared/modules/banner/components/banner/banner.component.html
+++ b/src/app/shared/modules/banner/components/banner/banner.component.html
@@ -1,6 +1,6 @@
 <div class="banner">
   <div class="container">
-    <h1>Medium Clone</h1>
+    <h1>Medium clone</h1>
     <p>A place to share knowledge</p>
   </div>
 </div>
